tests/snapshots/snapshots__pptx__handmade-inherit.pptx.snap
---
source: tests/snapshots.rs
expression: output
---
<!-- anydoc:source-unit-start kind=slide ordinal=1 status=parsed -->

## Inherited Title Slide

- iii. **Roman three bold via master**

- iv. **Roman four** with bold turned off

      - *Dash bullet italic via master level two*

**Plain closing line**

<!-- anydoc:source-unit-end kind=slide ordinal=1 status=parsed -->
