tests/snapshots/snapshots__pptx__handmade-order.pptx.snap
---
source: tests/snapshots.rs
expression: output
---
<!-- anydoc:source-unit-start kind=slide ordinal=1 status=parsed -->

Kicker before the title

## Title placed second

Body after the title

Quarterly numbers

<!-- anydoc:source-unit-end kind=slide ordinal=1 status=parsed -->
